<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format2.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="2">
  <name>service_example</name>
  <version>0.1.0</version>
  <description>
    ROS2 service example
  </description>
  <maintainer email="keisuke.shima@tier4.jp">Keisuke Shima</maintainer>
  <license>Apache License 2.0</license>
  <author email="keisuke.shima@tier4.jp">Keisuke Shima</author>

  <buildtool_depend>ament_cmake_auto</buildtool_depend>

  <depend>rclcpp</depend>
  <depend>rclcpp_components</depend>

  <depend>std_msgs</depend>
  <depend>example_interfaces</depend>

  <exec_depend>launch_ros</exec_depend>
  <exec_depend>launch_xml</exec_depend>

  <test_depend>ament_cmake_pytest</test_depend>
  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>
  <test_depend>launch</test_depend>
  <test_depend>launch_testing</test_depend>
  <test_depend>launch_testing_ament_cmake</test_depend>
  <test_depend>launch_testing_ros</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
